# cmake-examples

1-simple/: CMakeLists.txt  README.md  hello.c
2-dependencies/: CMakeLists.txt  README.md
2-dependencies/src/: a.c  a.h  b.c  b.h  c.c  c.h  main.c
3-libraries/: CMakeLists.txt  README.md
3-libraries/src/: main.c
4-lit/: CMakeLists.txt  README.md
4-lit/cmake/: AddLLVM.cmake
4-lit/src/: CMakeLists.txt
4-lit/test/: CMakeLists.txt  lit.cfg  test_hello.c
4-lit/test/base64/: test_base64.c
4-lit/test/bzip2/: test_bzip2.c
